Revert "Use sequence instead of token list to store identifier numbers."
This reverts commit a4370c8dc1d4463243489b7f21ba65e3e49fd58c.

--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ TODO
 * Define variables used to store keys
 * Check default dim keys for right format
 * Check naming conventions for local and global variables
-* Check required package versions (\char_generate:nn?)
+* Check required package versions
 * Check compile warnings
 
 
